feat: add route climb feature
