# route-adapter/src/main/java/be/nicholasmeyers/headoftp/route/adapter/repository/RouteClimbJpaRepository.java
@@ -1,0 +1,12 @@
+package be.nicholasmeyers.headoftp.route.adapter.repository;
+
+import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.stereotype.Repository;
+
+import java.util.UUID;
+
+@Repository
+public interface RouteClimbJpaRepository extends JpaRepository<RouteClimbJpaEntity, UUID> {
+
+    void deleteByRouteId(UUID routeId);
+}
