# route-domain/src/main/java/be/nicholasmeyers/headoftp/route/domain/RouteClimb.java
@@ -1,0 +1,8 @@
+package be.nicholasmeyers.headoftp.route.domain;
+
+public record RouteClimb(Integer startDistanceInMeter,
+                         Integer endDistanceInMeter,
+                         Integer lengthInMeter,
+                         Integer elevationGainInMeter,
+                         Double averageGradient) {
+}
