# route-usecase/src/main/java/be/nicholasmeyers/headoftp/route/projection/RouteClimbProjection.java
@@ -1,0 +1,8 @@
+package be.nicholasmeyers.headoftp.route.projection;
+
+public record RouteClimbProjection(Integer startDistanceInMeter,
+                                    Integer endDistanceInMeter,
+                                    Integer lengthInMeter,
+                                    Integer elevationGainInMeter,
+                                    Double averageGradient) {
+}
