# route-usecase/src/main/java/be/nicholasmeyers/headoftp/route/repository/RouteClimbQueryRepository.java
@@ -1,0 +1,11 @@
+package be.nicholasmeyers.headoftp.route.repository;
+
+import be.nicholasmeyers.headoftp.route.projection.RouteClimbProjection;
+
+import java.util.List;
+import java.util.UUID;
+
+public interface RouteClimbQueryRepository {
+
+    List<RouteClimbProjection> findAllRouteClimbsByRouteId(UUID routeId);
+}
